[package]
name = "webserver"
version = "0.1.0"
authors = ["Johann Hipp <jhipp@unibz.it>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket-multipart-form-data = "0.4.1"
postgres = "0.15.2"
rand = "0.6.5"
chrono = "0.4"
regex = "1"
md5 = "0.6.1"
lazy_static = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
